--- a/VitaminoMania/VitaminoMania/Base.lproj/Main.storyboard
+++ b/VitaminoMania/VitaminoMania/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TIb-yk-kkq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="f85-PQ-a6v">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,57 +9,115 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Summer-->
+        <scene sceneID="P3h-Pf-NTs">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VitaminoMania" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="zs9-Ou-PQd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4hw-5a-0sE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="OGp-e6-R6e"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ZbU-0W-Qhr"/>
+                    <tabBarItem key="tabBarItem" title="Summer" image="summer" selectedImage="summer" id="ho2-jo-IrY"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ynp-J2-Vik" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1050.7246376811595" y="-28.125"/>
+            <point key="canvasLocation" x="-687" y="1110"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="0ei-ID-gUF">
+        <scene sceneID="DCP-4h-fBJ">
             <objects>
-                <viewController id="WeP-fH-pgV" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dEh-xV-2qG">
+                <viewController id="Jrp-wc-FYE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8xD-9i-V6l">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="22M-HC-vtn"/>
+                        <viewLayoutGuide key="safeArea" id="5Y3-bl-UoS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="6bq-JK-07H"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JXl-Cg-iD7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hsp-Wn-ipZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2006" y="-28"/>
+            <point key="canvasLocation" x="1284.0579710144928" y="381.69642857142856"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="89G-Gu-fGP">
+        <!--Spring-->
+        <scene sceneID="uzZ-Z9-qIB">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TIb-yk-kkq" sceneMemberID="viewController">
+                <viewController id="c2Z-5h-zMi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hXf-Vi-XqA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="bVD-CU-NTC"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Spring" image="spring" selectedImage="spring" id="jIC-b2-WBd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kSj-GO-L7g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1323" y="1110"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="isN-8I-cVz">
+            <objects>
+                <tabBarController id="f85-PQ-a6v" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vd7-hs-1R4">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="c2Z-5h-zMi" kind="relationship" relationship="viewControllers" id="1Ux-qc-w2U"/>
+                        <segue destination="zs9-Ou-PQd" kind="relationship" relationship="viewControllers" id="918-BR-Frs"/>
+                        <segue destination="DpS-vd-UNa" kind="relationship" relationship="viewControllers" id="OQE-fb-IWB"/>
+                        <segue destination="Gud-TN-Tv4" kind="relationship" relationship="viewControllers" id="71M-yI-ykM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kMl-FP-P9b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-446" y="383"/>
+        </scene>
+        <!--Autumn-->
+        <scene sceneID="dAC-lJ-vyY">
+            <objects>
+                <viewController id="DpS-vd-UNa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zxB-zQ-J6B">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="YBO-kw-Omf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Autumn" image="autumn" selectedImage="autumn" id="ZOJ-vz-UO2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Csf-8h-bFa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-54" y="1110"/>
+        </scene>
+        <!--Winter-->
+        <scene sceneID="fRv-xu-H89">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gud-TN-Tv4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Winter" image="winter" id="PB0-dp-A07"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QzX-54-zP7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PyF-rk-und">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="RfT-3a-gS8"/>
+                        <segue destination="Jrp-wc-FYE" kind="relationship" relationship="rootViewController" id="eER-YJ-v7Q"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ptV-Fv-qCe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KfN-tp-Sct" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="373.91304347826087" y="381.69642857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="autumn" width="48" height="48"/>
+        <image name="spring" width="48" height="48"/>
+        <image name="summer" width="48" height="48"/>
+        <image name="winter" width="48" height="48"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
