--- a/VitaminoMania/Storyboards/Seasons/Spring.storyboard
+++ b/VitaminoMania/Storyboards/Seasons/Spring.storyboard
@@ -29,25 +29,37 @@
         <scene sceneID="hgk-P9-Z2o">
             <objects>
                 <viewController id="hPM-Qk-6qR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="oee-Pi-0HV">
+                    <view key="view" contentMode="scaleToFill" id="oee-Pi-0HV">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fZ-u3-Qrq">
-                                <rect key="frame" x="175" y="460" width="50" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3oN-Jj-87d">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ReusableCell" id="wKh-nC-ooE">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wKh-nC-ooE" id="16j-7j-XZg">
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UmO-Ze-K5m">
+                                                    <rect key="frame" x="188" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1NV-sj-xaN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6fZ-u3-Qrq" firstAttribute="leading" secondItem="1NV-sj-xaN" secondAttribute="leading" constant="175" id="2iJ-Kj-G0H"/>
-                            <constraint firstItem="6fZ-u3-Qrq" firstAttribute="top" secondItem="1NV-sj-xaN" secondAttribute="top" constant="357" id="DqU-cK-s6H"/>
-                            <constraint firstItem="1NV-sj-xaN" firstAttribute="trailing" secondItem="6fZ-u3-Qrq" secondAttribute="trailing" constant="168" id="ebR-Lk-nrk"/>
-                            <constraint firstItem="1NV-sj-xaN" firstAttribute="bottom" secondItem="6fZ-u3-Qrq" secondAttribute="bottom" constant="381" id="mde-ZX-hJx"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Spring" image="spring" selectedImage="spring" id="cbH-hj-fo3">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="5"/>
@@ -56,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gjn-0A-VQL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1323" y="1110"/>
+            <point key="canvasLocation" x="-1346" y="1110"/>
         </scene>
     </scenes>
     <resources>
